6-9店铺管理页面的前端开发

--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -47,8 +47,9 @@
 	<div class="page-group">
 		<div id="page-label-input" class="page">
 			<header class="bar bar-nav">
-				<a class="button button-link button-nav pull-left back"> 
-					<span class="icon icon-left" ></span> 返回
+				<a class="button button-link button-nav pull-left back"
+					href="javascript:history.back(-1)"> <span
+					class="icon icon-left"></span> 返回
 				</a>
 				<h1 class="title">商店信息</h1>
 			</header>
@@ -172,7 +173,7 @@
 		src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
 		src='../resources/js/shop/shopoperation.js' charset='utf-8'></script>
-	<script type='text/javascript'
-		src='../resources/js/common/common.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/common/common.js'
+		charset='utf-8'></script>
 </body>
 </html>
